--- a/news.html
+++ b/news.html
@@ -68,10 +68,10 @@
                 <a href="news/solo"><h2>SOLO | " REMEMBERING "</h2></a>
                 <p class="date">01.JANUAR.2025</p>
                 <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm wird jetzt auf YouTube mit einem kleinen Video vorgestellt</p>
-                <a href="news/joschostephan" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
-                <a href="news/">
+                <a href="news/remembering">
                 <img loading="lazy" src="image/.webp" alt="" class="news-image"></a>
                 <a href="news/"><h2></h2></a>
                 <p class="date">30.JANUAR.2024</p>
