--- a/news.html
+++ b/news.html
@@ -71,12 +71,13 @@
                 <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
-                <a href="news/remembering">
-                <img loading="lazy" src="image/.webp" alt="" class="news-image"></a>
-                <a href="news/"><h2></h2></a>
-                <p class="date">30.JANUAR.2024</p>
-                <p class="bold uppercase"></p>
-                <a href="news/" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="news/soloabend_gemmirgheim">
+                <img loading="lazy" src="image/soloabend_gemmirgheim.webp" alt="soloabend_gemmirgheim" class="news-image"></a>
+                <a href="news/"><h2>SOLO KONZERTABEND | GEMMRIGHEIM</h2></a>
+                <p class="date">30.NOVEMBER.2024</p>
+                <p class="bold uppercase">KOMPONIERT UND GESPIELT VON
+                    HARALD OELER</p>
+                <a href="news/soloabend_gemmirgheim" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
                 <a href="news/">
