--- a/news.html
+++ b/news.html
@@ -80,12 +80,12 @@
                 <a href="news/soloabend_gemmirgheim" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
-                <a href="news/">
-                <img loading="lazy" src="image/.webp" alt="" class="news-image"></a>
-                <a href="news/"><h2></h2></a>
-                <p class="date">30.JANUAR.2024</p>
-                <p class="bold uppercase"></p>
-                <a href="news/" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="news/duoklakk_1">
+                <img loading="lazy" src="image/duoklakk_1.webp" alt="duoklakk_1" class="news-image"></a>
+                <a href="news/duoklakk_1"><h2>TOUR | DUO KLAKK! </h2></a>
+                <p class="date">30.OKTOBER.2024</p>
+                <p class="bold uppercase">TOUR IN DEUTSCHLAND: BAD REICHENHALL, HOF, UND BAYREUTH</p>
+                <a href="news/duoklakk_1" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
                 <a href="news/joschostephan">
