--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
             <div class="news-column">
                 <a href="news/soloabend_gemmirgheim">
                 <img loading="lazy" src="image/soloabend_gemmirgheim.webp" alt="soloabend_gemmirgheim" class="news-image"></a>
-                <a href="news/"><h2>SOLO KONZERTABEND | GEMMRIGHEIM</h2></a>
+                <a href="news/soloabend_gemmirgheim"><h2>SOLO KONZERTABEND | GEMMRIGHEIM</h2></a>
                 <p class="date">30.NOVEMBER.2024</p>
                 <p class="bold uppercase">KOMPONIERT UND GESPIELT VON
                     HARALD OELER</p>
