--- a/news.html
+++ b/news.html
@@ -65,9 +65,9 @@
             <div class="news-column">
                 <a href="news/solo">
                 <img loading="lazy" src="image/remembering.webp" alt="joschostephan" class="news-image"></a>
-                <a href="news/solo"><h2>SOLO | " REMEMBERING "</h2></a>
+                <a href="news/solo"><h2>SOLO | "REMEMBERING"</h2></a>
                 <p class="date">01.JANUAR.2025</p>
-                <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm wird jetzt auf YouTube mit einem kleinen Video vorgestellt</p>
+                <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm ist jetzt auf YouTube!</p>
                 <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
