--- a/termin/past.html
+++ b/termin/past.html
@@ -69,6 +69,33 @@
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
                     <li>
+                        <p class="uhr">Sonntag, 17:00 Uhr</p>
+                        <p class="datum">08.12.2024</p>
+                        <p class="concert">Akkordeon & Cello Konzert mit Ivan Turkalj</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/place/Siebold-Museum/@49.7937474,9.8943951,17z/data=!3m1!4b1!4m6!3m5!1s0x47a290f861613c1d:0x297ca6c28b7b417e!8m2!3d49.7937474!4d9.8943951!16s%2Fg%2F1pznmpzh5?entry=ttu&g_ep=EgoyMDI1MDEyOS4xIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Siebold Museum, Würzburg
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://www.ivanturkalj.com">Akkordeon & Cello Konzert mit Ivan Turkalj</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Evangelische%20Kirche,%20Gemmrigheim&dates=20241130T170000Z/20241130T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20241130T170000Z%0D%0ADTEND:20241130T190000Z%0D%0ALOCATION:Evangelische%20Kirche,%20Gemmrigheim%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="termin/„TANGO  NUEVO!”.pdf.pdf">mehr infos</a>
+                    </li>
+                    <li>
                         <p class="uhr">Samstag, 18:00 Uhr</p>
                         <p class="datum">30.11.2024</p>
                         <p class="concert">Tango : Nuevo!</p>
