--- a/news.html
+++ b/news.html
@@ -88,6 +88,14 @@
                 <a href="news/duoklakk_1" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
+                <a href="news/zontaclub">
+                <img loading="lazy" src="image/zontaclub.webp" alt="zontaclub" class="news-image"></a>
+                <a href="news/zontaclub"><h2>DUO ViA! | RESIDENZ WÜRZBURG</h2></a>
+                <p class="date">11.MAI.2024</p>
+                <p class="bold uppercase">Jubiläumskonzert 40 Jahre ZONTA CLUB WÜRZBURG</p>
+                <a href="news/zontaclub" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
                 <a href="news/joschostephan">
                 <img loading="lazy" src="image/joschostephan1.webp" alt="joschostephan" class="news-image"></a>
                 <a href="news/joschostephan"><h2>TOUR | JOSCHO STEPHAN TRIO</h2></a>
