--- a/news.html
+++ b/news.html
@@ -64,10 +64,26 @@
         <div class="news">
             <div class="news-column">
                 <a href="news/solo">
-                <img loading="lazy" src="image/remembering.webp" alt="joschostephan" class="news-image"></a>
+                <img loading="lazy" src="image/remembering.webp" alt="remembering" class="news-image"></a>
                 <a href="news/solo"><h2>SOLO | "REMEMBERING"</h2></a>
                 <p class="date">01.JANUAR.2025</p>
                 <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm ist jetzt auf YouTube!</p>
+                <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/siebold">
+                <img loading="lazy" src="image/siebold.webp" alt="siebold" class="news-image"></a>
+                <a href="news/siebold"><h2>DUO | AKKORDEON & CELLO </h2></a>
+                <p class="date">8.DEZEMBER.2024</p>
+                <p class="bold uppercase">AKKORDEON & CELLO KONZERT MIT IVAN TURKALJ IN WÜRZBURG</p>
+                <a href="news/siebold" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/rememberingseries">
+                <img loading="lazy" src="image/rememberingseries.webp" alt="rememberingseries" class="news-image"></a>
+                <a href="news/rememberingseries"><h2>LISTEN | "REMEMBERING"</h2></a>
+                <p class="date">30.NOVEMBER.2024</p>
+                <p class="bold uppercase">Remembering Bach / Remembering Piazzolla</p>
                 <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
