--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@
                 <a href="news/rememberingseries"><h2>LISTEN | "REMEMBERING"</h2></a>
                 <p class="date">30.NOVEMBER.2024</p>
                 <p class="bold uppercase">Remembering Bach / Remembering Piazzolla</p>
-                <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="news/rememberingseries.html" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
                 <a href="news/soloabend_gemmirgheim">
