--- a/termine.html
+++ b/termine.html
@@ -139,7 +139,7 @@
                     
                               
                     <li>
-                        <p class="uhr">Sonntag,tba</p>
+                        <p class="uhr">Sonntag,17:30 Uhr</p>
                         <p class="datum">16.02.2025</p>
                         <p class="concert">Tango : Nuevo!</p>
                         <p class="location"><i class="fa-solid fa-location-dot"></i> 
