--- a/termin/past.html
+++ b/termin/past.html
@@ -69,6 +69,113 @@
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
                     <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">01.03.2025</p>
+                        <p class="concert">DUO KlAkk! | alte x neue</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Spit%C3%A4le,+Zeller+Str.+1,+97082+W%C3%BCrzburg" target="_blank">
+                                Spitäle, Zeller Str. 1, 97082 Würzburg
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://haraldoeler.com/projekte/duoklakk">DUO KlAkk!</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20|%20alte%20x%20neue&details=DUO%20KlAkk!%20|%20alte%20x%20neue&location=Spit%C3%A4le,%20Zeller%20Str.%201,%2097082%20W%C3%BCrzburg&dates=20250301T190000Z/20250301T210000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20250301T183000Z%0D%0ADTEND:20250301T203000Z%0D%0ALOCATION:Spit%C3%A4le,%20Zeller%20Str.%201,%2097082%20W%C3%BCrzburg%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_event.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos | ticket</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag,17:30 Uhr</p>
+                        <p class="datum">16.02.2025</p>
+                        <p class="concert">Tango : Nuevo!</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Deutschordensm%C3%BCnster+St.+Peter+und+Paul,+Heilbronn" target="_blank">
+                                St. Peter und Paul, Heilbronn
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="">komponiert und gespielt von Harald Oeler</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Deutschordensm%C3%BCnster%20St.%20Peter%20und%20Paul,%20Heilbronn&dates=20250216T000000Z/20250216T235900Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20250216T000000Z%0D%0ADTEND:20250216T235900Z%0D%0ALOCATION:Deutschordensm%C3%BCnster%20St.%20Peter%20und%20Paul,%20Heilbronn%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="">mehr infos</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">25.01.2025</p>
+                        <p class="concert">Neuköllner Kultur & Debattiersalon</p>
+                        <p class="location">
+                            <i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://maps.app.goo.gl/C7nBztJ6b2g3ZWtCA" target="_blank">
+                                Dr. Martina Rummel, Karl-Marx-Straße 162, 12043 Berlin
+                            </a>
+                        </p>
+                        <p class="concert-info">Komponiert und gespielt von Harald Oeler</p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Dr.%20Martina%20Rummel,%20Karl-Marx-Straße%20162,%2012043%20Berlin&dates=20250125T183000Z/20250125T203000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20250125T183000Z%0D%0ADTEND:20250125T203000Z%0D%0ALOCATION:Dr.%20Martina%20Rummel,%20Karl-Marx-Straße%20162,%2012043%20Berlin%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://schloss-gutshof-britz.de/schloss-britz">mehr Infos</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 16:00 Uhr</p>
+                        <p class="datum">25.01.2025</p>
+                        <p class="concert">Tango : Nuevo!</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Schloss+Britz+Berlin" target="_blank">
+                                Schloss Britz, Berlin
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <p>komponiert und gespielt von Harald Oeler</p>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Schloss%20Britz,%20Berlin&dates=20250125T150000Z/20250125T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20250125T150000Z%0D%0ADTEND:20250125T170000Z%0D%0ALOCATION:Schloss%20Britz,%20Berlin%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://schloss-gutshof-britz.de/schloss-britz">mehr infos</a>
+                    </li>
+                    <li>
                         <p class="uhr">Sonntag, 17:00 Uhr</p>
                         <p class="datum">08.12.2024</p>
                         <p class="concert">Akkordeon & Cello Konzert mit Ivan Turkalj</p>
