--- a/termine.html
+++ b/termine.html
@@ -222,6 +222,31 @@
                         <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos </a>
                     </li>
                     <li>
+                        <p class="uhr">Freitag, 19:30 Uhr</p>
+                        <p class="datum">17.10.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Untertorstraße+6,+97828+Marktheidenfeld" target="_blank">
+                                Franck-Haus, Untertorstraße 6, 97828 Marktheidenfeld
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Franck-Haus%20Marktheidenfeld&location=Franck-Haus,%20Untertorstraße%206,%2097828%20Marktheidenfeld&dates=20251017T173000Z/20251017T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Franck-Haus%20Marktheidenfeld%0D%0ADTSTART:20251017T173000Z%0D%0ADTEND:20251017T193000Z%0D%0ALOCATION:Franck-Haus,%20Untertorstraße%206,%2097828%20Marktheidenfeld%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-10-17_Marktheidenfeld.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                    
+                    <li>
                         <p class="uhr">Samstag, 19:00 Uhr</p>
                         <p class="datum">25.10.2025</p>
                         <p class="concert">Solokonzert | REMEMBERING</p>
