--- a/termine.html
+++ b/termine.html
@@ -100,8 +100,8 @@
                                 download="DUO_KlAkk_2025-07-05.ics">
                                 iCAL
                             </a>
-                        </div>                        
-                        <a target="_blank" class="mehrinfo" href="termin/DUO KlAKK! GEMMIRGHEIM.pdf">mehr infos </a>
+                        </div>     
+                        <a class="mehrinfo" href="DUO KlAKK! GEMMIRGHEIM.pdf" download="GEMMRIGHEIM">mehr infos</a>                   
                     </li>                    
                     <li>
                         <p class="uhr">Sonntag, 17:00 Uhr</p>
@@ -125,8 +125,7 @@
                                 iCAL
                             </a>
                         </div>
-                                             
-                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos </a>
+                        <a class="mehrinfo" href="DUO KLAKK! STRAUBING.pdf" download="STRAUBING">mehr infos</a>                   
                     </li>
                     <li>
                         <p class="uhr">Mittwoch, 12:00 Uhr</p>
