--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -73,6 +73,7 @@
                 <br>
                 <br>Zukünftig sieht sich KlAkk! Als Klangmedium der elektroakustischen Neuen Musik mit dem Ziel der Vermehrung originaler Literatur für Klarinette und Akkordeon im Kontext elektronischer Klangmedien.</p> 
                 <br>
+                <a class="download" href="duoklakk.pdf" download="DUO KLAKK">mehr infos</a>
 
             </div>
             <div class="col-right">
