--- a/news.html
+++ b/news.html
@@ -63,12 +63,37 @@
         <h2 class="section-title">NEWS</h2>
         <div class="news">
             <div class="news-column">
+                <a href="news/tkvlsolo">
+                <img loading="lazy" src="image/Harald_Klangmanufaktur-28.webp" alt="tkvlsolo" class="news-image"></a>
+                <a href="news/tkvlsolo"><h2>SOLO | REMEMBERING BACH! </h2></a>
+                <p class="date">15.OKTOBER.2025</p>
+                <p class="bold uppercase">TKVL KONZERTE 2025</p>
+                <a href="news/tkvlsolo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            
+            <div class="news-column">
+                <a href="news/duoklakk_2">
+                <img loading="lazy" src="image/duoklakk cover.jpg" alt="duoklakk_1" class="news-image"></a>
+                <a href="news/duoklakk_2.html"><h2>TOUR | DUO KLAKK! </h2></a>
+                <p class="date">01.JUNI.2025</p>
+                <p class="bold uppercase">TOUR IN DEUTSCHLAND 2025</p>
+                <a href="news/duoklakk_2.html" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
                 <a href="news/solo">
                 <img loading="lazy" src="image/remembering.webp" alt="remembering" class="news-image"></a>
                 <a href="news/solo"><h2>SOLO | "REMEMBERING"</h2></a>
                 <p class="date">01.JANUAR.2025</p>
                 <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm ist jetzt auf YouTube!</p>
                 <a href="news/solo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/akkordeonschule">
+                <img loading="lazy" src="image/schule1.webp" alt="schule1" class="news-image"></a>
+                <a href="news/akkordeonschule"><h2>AKKORDEONSCHULE</h2></a>
+                <p class="date">01.JANUAR.2025</p>
+                <p class="bold uppercase">Mein Akkordeonschule Band I für Anfänger ist jetzt auf ... !</p>
+                <a href="news/akkordeonschule" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="news-column">
                 <a href="news/siebold">
