--- a/termine.html
+++ b/termine.html
@@ -176,6 +176,30 @@
                         <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
                     </li>
                     <li>
+                        <p class="uhr">Mittwoch, 20:00 Uhr</p>
+                        <p class="datum">29.10.2025</p>
+                        <p class="concert">Singer-Songwriter-Konzert mit Christopher von Mammen und Markus Jung</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Schulgasse+3a,+92637+Weiden+in+der+Oberpfalz" target="_blank">
+                                KunstKaufHaus, Königsstraße 25, 95028 Hof
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden&location=Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz&dates=20251025T170000Z/20251025T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden%0D%0ADTSTART:20251025T170000Z%0D%0ADTEND:20251025T190000Z%0D%0ALOCATION:Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-10-25_Weiden.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://christophervonmammen.de/?page_id=4279">mehr infos </a>
+                    </li>
+                    <li>
                         <p class="uhr">Dienstag, 20:00 Uhr</p>
                         <p class="datum">04.11.2025</p>
                         <p class="concert">Solokonzert | REMEMBERING</p>
