--- a/termin/past.html
+++ b/termin/past.html
@@ -65,9 +65,154 @@
         <div class="past">
             <h2 class="section-title">PAST EVENTS</h2>
             <div id="year">
-                <h2 class="year">2024</h2>
+                <h2 class="year">2025</h2>
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
+                     
+                    <li>
+                        <p class="uhr">Sonntag, 18:00 Uhr</p>
+                        <p class="datum">28.09.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//ars+musica,+Marktplatz+3,+97239+Aub" target="_blank">
+                                Ars Musica, Marktplatz 3, 97239 Aub
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20bei%20ars%20musica%20in%20Aub&location=ars%20musica%2C%20Marktplatz%203%2C%2097239%20Aub&dates=20250928T160000Z/20250928T180000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20bei%20ars%20musica%20in%20Aub%0D%0ADTSTART:20250928T160000Z%0D%0ADTEND:20250928T180000Z%0D%0ALOCATION:ars%20musica,%20Marktplatz%203,%2097239%20Aub%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-09-28_Aub.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 21:00 Uhr</p>
+                        <p class="datum">27.09.2025</p>
+                        <p class="concert">DUO KlAKK! HALLERSTEINER NACHTKONZERT</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//ars+musica,+Marktplatz+3,+97239+Aub" target="_blank">
+                                Dorfkirche, Hallerstein
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20bei%20ars%20musica%20in%20Aub&location=ars%20musica%2C%20Marktplatz%203%2C%2097239%20Aub&dates=20250928T160000Z/20250928T180000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20bei%20ars%20musica%20in%20Aub%0D%0ADTSTART:20250928T160000Z%0D%0ADTEND:20250928T180000Z%0D%0ALOCATION:ars%20musica,%20Marktplatz%203,%2097239%20Aub%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-09-28_Aub.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">20.09.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Arche,+Friedrich-Ebert-Straße+20,+97421+Schweinfurt" target="_blank">Arche, Friedrich-Ebert-Straße 20, 97421 Schweinfurt
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Soloabend&details=Soloabend%20in%20der%20Arche%20Schweinfurt&location=Arche%2C%20Friedrich-Ebert-Stra%C3%9Fe%2020%2C%2097421%20Schweinfurt&dates=20250920T173000Z/20250920T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Soloabend%0D%0ADESCRIPTION:Soloabend%20in%20der%20Arche%20Schweinfurt%0D%0ADTSTART:20250920T173000Z%0D%0ADTEND:20250920T193000Z%0D%0ALOCATION:Arche,%20Friedrich-Ebert-Stra%C3%9Fe%2020,%2097421%20Schweinfurt%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Soloabend_2025-09-20.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                        <li>
+                        <p class="uhr">Mittwoch, 12:00 Uhr</p>
+                        <p class="datum">23.07.2025</p>
+                        <p class="concert">Orgelduo mit Michael Dorn</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Stadtkirche,+Kirchpl.+1,+95444+Bayreuth" target="_blank">Stadtkirche Bayreuth, Kirchplatz 1, 95444 Bayreuth
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Orgelduo%20mit%20Michael%20Dorn&details=Orgelduo%20mit%20Michael%20Dorn%20in%20der%20Stadtkirche%20Bayreuth&location=Stadtkirche%2C%20Kirchplatz%201%2C%2095444%20Bayreuth&dates=20250723T100000Z/20250723T110000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Orgelduo%20mit%20Michael%20Dorn%0D%0ADESCRIPTION:Orgelduo%20mit%20Michael%20Dorn%20in%20der%20Stadtkirche%20Bayreuth%0D%0ADTSTART:20250723T100000Z%0D%0ADTEND:20250723T110000Z%0D%0ALOCATION:Stadtkirche,%20Kirchplatz%201,%2095444%20Bayreuth%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Orgelduo_2025-07-23.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag, 17:00 Uhr</p>
+                        <p class="datum">13.07.2025</p>
+                        <p class="concert">DUO KlAkk! goes BACH</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Weytterturm,+In+der+B%C3%BCrg+34,+94315+Straubing" target="_blank">
+                                Weytterturm, In der Bürg 34, 94315 Straubing
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20goes%20BACH&details=DUO%20KlAkk!%20in%20Straubing%20am%20Weytterturm&location=Weytterturm%2C%20In%20der%20B%C3%BCrg%2034%2C%2094315%20Straubing&dates=20250713T150000Z/20250713T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20goes%20BACH%0D%0ADESCRIPTION:DUO%20KlAkk!%20in%20Straubing%20am%20Weytterturm%0D%0ADTSTART:20250713T150000Z%0D%0ADTEND:20250713T170000Z%0D%0ALOCATION:Weytterturm,%20In%20der%20B%C3%BCrg%2034,%2094315%20Straubing%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_2025-07-13.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a class="mehrinfo" href="DUO KLAKK! STRAUBING.pdf" download="STRAUBING">mehr infos</a>                   
+                    </li>
+                    
+                    <li>
+                        <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">05.07.2025</p>
+                        <p class="concert">DUO KlAkk! goes BACH</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Johanniskirche,+74376+Gemmrigheim" target="_blank">
+                                Johanneskirche, 74376 Gemmrigheim
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20goes%20BACH&details=DUO%20KlAkk!%20in%20der%20Johanniskirche%2C%20Gemmrigheim&location=Johanniskirche%2C%2074376%20Gemmrigheim&dates=20250705T173000Z/20250705T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20goes%20BACH%0D%0ADESCRIPTION:DUO%20KlAkk!%20in%20der%20Johanniskirche%2C%20Gemmrigheim%0D%0ADTSTART:20250705T173000Z%0D%0ADTEND:20250705T193000Z%0D%0ALOCATION:Johanniskirche%2C%2074376%20Gemmrigheim%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_2025-07-05.ics">
+                                iCAL
+                            </a>
+                        </div>     
+                        <a class="mehrinfo" href="DUO KlAKK! GEMMIRGHEIM.pdf" download="GEMMRIGHEIM">mehr infos</a>                   
+                    </li>
                     <li>
                         <p class="uhr">Samstag, 19:30 Uhr</p>
                         <p class="datum">01.03.2025</p>
