--- a/projekte/duovia.html
+++ b/projekte/duovia.html
@@ -75,6 +75,8 @@
             </div>
     
             <div class="col-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AJ6uhwH7-gI?si=_O4ldoopTOJFV-Av" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
                 <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/kw7_NO-klxM?si=WMlvblSPOAOChYwY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe loading="lazy" class="spotify no-border" src="https://open.spotify.com/embed/album/0MfH41bgOifWl6W9fXDcW1?utm_source=generator&theme=0" height="200" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     
