--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -96,8 +96,8 @@
 
             </div>
             <div class="col-right">
-                
-                <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/X1X9cu2THKQ?si=FLqFh8Kr-SfC7c5x" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    
+                <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/4NPvdif9o6M?si=sKKdvuc_SNx19JcM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <br>
                 <h2>Duo KlAkk! goes BACH!</h2>
                 <ul class="programm">
